Refactor environment gateway models
